--- a/view/common/media-source-sidebar.phtml
+++ b/view/common/media-source-sidebar.phtml
@@ -1,15 +1,13 @@
-<div id="media-source" class="sidebar flags">
-    <div class="confirm-main">
-    <a href="#" class="sidebar-close o-icon-close"><span class="screen-reader-text"><?php echo $this->translate('Close'); ?></span></a>
-    <h3><?php echo $this->translate('Media source'); ?></h3>
-    <select name="media-source" data-flag-class="media-source" data-flag-label="<?php echo $this->translate('Media source'); ?>">
-        <option><?php echo $this->translate('Select below'); ?></option>
-        <?php foreach($mediaForms as $type=>$mediaForm): ?>
-        <option data-flag-name="media_source" value="<?php echo $type; ?>"><?php echo $mediaForm['label']; ?></option>
-        <?php endforeach; ?>
-    </select>
-    </div>
-    <div class="confirm-panel">
-        <button type="button"><?php echo $this->translate('Apply changes'); ?></button>
+<div id="media-source" class="mapping-group">
+    <a href="#" class="expand" aria-label="<?php echo $this->translate('Expand'); ?>">
+        <h4><?php echo $this->translate('Media source'); ?></h4>
+    </a>
+    <div class="collapsible">
+        <select name="media-source" data-flag-class="media-source" data-flag-label="<?php echo $this->translate('Media source'); ?>">
+            <option value="default"><?php echo $this->translate('Select below'); ?></option>
+            <?php foreach($mediaForms as $type=>$mediaForm): ?>
+            <option data-flag-name="media_source" value="<?php echo $type; ?>"><?php echo $mediaForm['label']; ?></option>
+            <?php endforeach; ?>
+        </select>
     </div>
 </div>
