--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -35,7 +35,7 @@ $pageTitle = isset($resourceTypeLabels[$resourceType])
 <input type="hidden" name="filepath" value="<?php echo $filepath; ?>" />
 <input type="hidden" name="media_type" value="<?php echo $mediaType; ?>" />
 <fieldset id="csv-import-basics-fieldset" class="section active">
-    <?php echo $this->formCollection($form, false); ?>
+    <?php echo $this->formCollection($form); ?>
 </fieldset>
 
 <fieldset id="mapping-data" class="section">
