--- a/view/csv-import/index/past-imports.phtml
+++ b/view/csv-import/index/past-imports.phtml
@@ -39,7 +39,6 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                 <input type="checkbox" name="jobs[]" value="<?php echo $job->id(); ?>"<?php if (!$isCreate || $undoJob) echo ' disabled="disabled"'; ?>/>
             </td>
             <td>
-                
                 <?php echo $escape($this->i18n()->dateFormat($job->started())); ?>
             </td>
             <td>
@@ -91,9 +90,21 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                     <?php echo $this->hyperlink($this->translate('Log'), $this->url('admin/id', ['controller' => 'job', 'action' => 'log', 'id' => $undoJob->id()]), ['target' => '_blank']); ?>
                 </span>
                 <?php endif; ?>
+                <?php if (!$undoJob->ended()): ?>
+                /
+                <span class="csv-import-job-stop">
+                    <?php echo $this->hyperlink($this->translate('Attempt stop'), $this->url('admin/id', ['controller' => 'job', 'action' => 'stop', 'id' => $undoJob->id()]), ['target' => '_blank']); ?>
+                </span>
+                <?php endif; ?>
             <?php
             else:
                 echo $escape($this->translate($job->status()));
+                if (!$job->ended()): ?>
+                /
+                <span class="csv-import-job-stop">
+                    <?php echo $this->hyperlink($this->translate('Attempt stop'), $this->url('admin/id', ['controller' => 'job', 'action' => 'stop', 'id' => $job->id()]), ['target' => '_blank']); ?>
+                </span>
+                <?php endif;
             endif;
             ?>
             </td>
